# astro-snr-calc

./: .gitignore  README.md  pyproject.toml
src/astro_snr_calc/: __init__.py  cli.py  field_scan_cli.py  snr_cli.py  utils.py  version.py  zemax_field_scan.py  zemax_iface.py
src/snr_calc/: __init__.py  cli.py  snr_calculator.py  zemax_iface.py
