[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "astro-snr-calc"
dynamic = ["version"]
description = "SNR modelling library and CLI for astronomical imagers"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Sunip K. Mukherjee", email = "sunipkmukherjee@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "astropy",
    "matplotlib",
    "numpy",
    "pythonnet; sys_platform == 'win32'",
    "scipy",
    "serde-dataclass",
    "dacite",
    "tomlkit",
]

[project.scripts]
SNRCalc = "astro_snr_calc.snr_cli:main"

[tool.setuptools.packages.find]
where = ["src"]
